[gd_scene load_steps=6 format=3 uid="uid://c7oady01goymq"]

[ext_resource type="Script" path="res://scenes/level_0.gd" id="1_51ndj"]
[ext_resource type="Script" path="res://addons/go_conductor/MusicSwitch.gd" id="2_e1xkh"]
[ext_resource type="Script" path="res://addons/go_conductor/SimpleMusicPlayer.gd" id="2_whcng"]
[ext_resource type="AudioStream" uid="uid://balw6nrbk6yu1" path="res://imports/music/drums.mp3" id="4_41rcc"]
[ext_resource type="AudioStream" uid="uid://c66k7eirobaes" path="res://imports/music/bass.mp3" id="5_d7iwc"]

[node name="Level0" type="Node2D"]
script = ExtResource("1_51ndj")

[node name="pause" type="Button" parent="."]
offset_left = 124.0
offset_top = 88.0
offset_right = 172.0
offset_bottom = 122.0
text = "Pause"

[node name="play" type="Button" parent="."]
offset_left = 193.0
offset_top = 125.0
offset_right = 248.0
offset_bottom = 159.0
text = "Play"

[node name="stop" type="Button" parent="."]
offset_left = 39.0
offset_top = 127.0
offset_right = 94.0
offset_bottom = 161.0
text = "Stop"

[node name="restart" type="Button" parent="."]
offset_left = 117.0
offset_top = 179.0
offset_right = 182.0
offset_bottom = 210.0
text = "Restart"

[node name="fadeToBass" type="Button" parent="."]
offset_left = -7.0
offset_top = 239.0
offset_right = 113.0
offset_bottom = 270.0
text = "Fade to bass"

[node name="fadeToDrums" type="Button" parent="."]
offset_left = 183.0
offset_top = 240.0
offset_right = 305.0
offset_bottom = 271.0
text = "Fade to Drums"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(149, 152)

[node name="music" type="Node" parent="."]
script = ExtResource("2_e1xkh")
transition_time = 2.0

[node name="drums" type="Node" parent="music"]
script = ExtResource("2_whcng")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="music/drums"]
stream = ExtResource("4_41rcc")

[node name="bass" type="Node" parent="music"]
script = ExtResource("2_whcng")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="music/bass"]
stream = ExtResource("5_d7iwc")

[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="fadeToBass" to="." method="_on_change_pressed"]
[connection signal="pressed" from="fadeToDrums" to="." method="_on_fade_to_drums_pressed"]
